add new robustnessconcept fig

--- a/tex/figures.tex
+++ b/tex/figures.tex
@@ -11,7 +11,7 @@
 
 \begin{figure*}[!htbp]
 \centering
-\noindent\includegraphics[width=1.0\textwidth]{fig/robustnessconcept.pdf}
+\noindent\includegraphics[width=1.0\textwidth]{fig/robustnessconceptvis.pdf}
 \caption{{\bf Stability and robustness of biological networks.} Linearization around a steady-state of a model of a biological network allows for the assessment of the stability of that state. For two-dimensional systems, assessment of stability in terms of the trace and determinant of the Jacobian matrix associated to a particular steady-state geometrically partitions the plane into a stable region (S, blue) and an unstable region (U, red). The stochastic process induced on the stable and unstable regions that results from modifications to a given dynamical model over evolutionary timescales is represented by the state transition diagram (bottom middle). The probability of remaining in the stable region in the context of such modifications, given a previously existing stable network, is then provided by estimating $R$.}
 \label{fig:robustnessconcept}
 \end{figure*}
