incorporate explicit definitions of relevant stochastic processes

--- a/tex/figures.tex
+++ b/tex/figures.tex
@@ -21,7 +21,7 @@
 \begin{figure*}[!htbp]
 \centering
 \noindent\includegraphics[width=1.0\textwidth]{fig/robustnessprocess.pdf}
-\caption{{\bf Assessment of dynamical robustness.} (A) Any stochastic process induced on the stable and unstable regions of the space of fixed points can be represented as a state transition diagram. The probability of remaining in the stable region in the context of such modifications, given a previously existing stable state, is then provided by estimating $R$. (B) The stochastic process that results from modifications to a given dynamical model over evolutionary timescales induces a stochastic process on the equivalence classes of fixed points $\mathcal{F}/{\sim}$ represented by the boxes in the top row. This in turn induces a process on the stable and unstable regions, which can be used to estimate robustness. (C) Each network architecture encoded by a directed graph, $\{G_1, \ldots, G_k \}$, that indicates the manner in which the variables of a biological network depend upon one another selects a particular subset of equivalence classes from $\mathcal{F}/{\sim}$ (see \ref{eq:jacgrapheqs}). Robustness can therefore be estimated for each network architecture independently.}
+\caption{{\bf Assessment of dynamical robustness.} (A) Any stochastic process induced on the stable and unstable regions of the space of fixed points can be represented as a state transition diagram. The conditional probability of remaining in the stable region in the context of such modifications, given a previously existing stable state, is then provided by estimating $R$. (B) The stochastic process that results from modifications to a given dynamical model over evolutionary timescales induces a stochastic process on the equivalence classes of fixed points $\mathcal{F}/{\sim}$ represented by the boxes in the top row. This in turn induces a process on the stable and unstable regions, which can be used to estimate robustness. We note that $R$ is distinct from the stationary probability of being within the stable region $p^{\infty}(S) = \frac{1-U}{2-R-U}$. (C) Each network architecture encoded by a directed graph, $\{G_1, \ldots, G_k \}$, that indicates the manner in which the variables of a biological network depend upon one another selects a particular subset of equivalence classes from $\mathcal{F}/{\sim}$ (see \ref{eq:jacgrapheqs}). Robustness can therefore be estimated independently for each network architecture.}
 \label{fig:robustnessprocess}
 \end{figure*}
 
